--- a/Index.html
+++ b/Index.html
@@ -1,47 +1,98 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
   <meta charset="UTF-8">
   <title>Animaties met vragen</title>
   <style>
-    html, body {
-      margin: 0; padding: 0; height: 100%;
-      overflow: hidden; font-family: sans-serif; background: black;
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      font-family: sans-serif;
+      background: black;
     }
-    body  {
+
+    body {
       background: url('./background.png') no-repeat top center;
     }
+
     #start-container {
-      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-      display: none; flex-direction: column; justify-content: center;
-      align-items: center; background-color: rgba(0,0,0,0.7);
-      color: white; z-index: 2; font-size: 1.5rem;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      z-index: 2;
+      font-size: 1.5rem;
     }
+
     #animatie {
-      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-      object-fit: cover; z-index: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: 0;
     }
+
     #vraag-container {
-      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-      display: none; flex-direction: column; justify-content: center;
-      align-items: center; background-color: rgba(110, 57, 79, 0.397);
-      color: white; z-index: 2; font-size: 1.5rem;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(110, 57, 79, 0.397);
+      color: white;
+      z-index: 2;
+      font-size: 1.5rem;
     }
-    .vraag { 
-      height: 9rem; margin-top: -8rem; margin-left: 2rem; width: 74rem;
-      text-align: center; background-color: rgba(32, 94, 30, 0.5); padding: 4rem 0;
+
+    .vraag {
+      height: 9rem;
+      margin-top: -8rem;
+      margin-left: 2rem;
+      width: 74rem;
+      text-align: center;
+      background-color: rgba(32, 94, 30, 0.5);
+      padding: 4rem 0;
     }
+
     #vraag0 {
-      margin-top: -7rem; margin-left: -6rem; height: 16rem;
+      margin-top: -7rem;
+      margin-left: -6rem;
+      height: 16rem;
       background-color: transparent;
     }
+
     button {
-      margin: 10px; padding: 12px 24px; font-size: 1rem;
-      border: none; border-radius: 8px;
-      background-color: #007bff; color: white; cursor: pointer;
+      margin: 10px;
+      padding: 12px 24px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
     }
-    button:hover { background-color: #0056b3; }
- 
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
     #verbindKnop {
       position: absolute;
       top: 20px;
@@ -49,228 +100,245 @@
       z-index: 10;
       background-color: #28a745;
     }
- 
+
     #verbindKnop:hover {
       background-color: #1e7e34;
     }
   </style>
 </head>
+
 <body>
-<div id="start-container">
-  <div class="vraag" id="vraag0">
-    <p>Hoe denk jij over AI in het onderwijs?</p> 
-    <button id="restart" onclick="speelVolgendeVideo()">Druk op een knop om te starten</button>
+  <div id="start-container">
+    <div class="start" id="vraag0">
+      <p>Hoe denk jij over AI in het onderwijs?</p>
+      <button id="restart" onclick="speelVolgendeVideo()">Druk op een knop om te starten</button>
 
+    </div>
   </div>
-</div>
- 
-<video id="animatie" autoplay muted playsinline disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback"></video>
- 
-<div id="vraag-container">
-  <div class="vraag" id="vraag1">
-    <p>Wat vond je van de animatie?</p>
-    <button onclick="beantwoordVraagBlue(1)">Goed</button>
-    <button onclick="beantwoordVraagRed(1)">Slecht</button>
-  </div>
-  <div class="vraag" id="vraag2" style="display:none;">
-    <p>Zou jij AI voor de klas willen?</p>
-    <button onclick="beantwoordVraagBlue(2)">Ja</button>
-    <button onclick="beantwoordVraagRed(2)">Nee</button>
-  </div>
-  <div class="vraag" id="vraag3" style="display:none;">
-    <p>Lijkt het jou verstandig om AI voor de klas te hebben?</p>
-    <button onclick="beantwoordVraagBlue(3)">Ja</button>
-    <button onclick="beantwoordVraagRed(3)">Nee</button>
-  </div>
-  <div class="vraag" id="vraag4" style="display:none;">
-    <p>Heb jij zelf ooit AI gebruikt?</p>
-    <button onclick="beantwoordVraagBlue(4, 1)">Ja</button>
-    <button onclick="beantwoordVraagRed(4, 2)">Nee</button>
-  </div>
-  <div class="vraag" id="totaal" style="display:none;">
-    <p>Dit is wat mensen hebben beantwoord</p>
-    <p id="antwoordBlauw"></p>
-    <p id="antwoordRood"></p>
-    <button id="restart" onclick="speelVolgendeVideo()">Druk op een knop om opnieuw te starten</button>
-    <button style="display: none;" id="restart" onclick="speelVolgendeVideo()">Druk op een knop om opnieuw te starten</button>
-  </div>
-</div>
- 
-<!-- Tijdelijke verbindknop -->
-<button id="verbindKnop">Verbind met Arduino</button>
- 
-<script>
-  const video = document.getElementById("animatie");
-  const vragen = document.getElementById("vraag-container");
-  const start = document.getElementById("start-container");
-  const videoBestanden = ["VideoMuse.mp4"];
-  let index = 0;
-  let vragenActief = false;
- 
-  function speelVolgendeVideo() {
-    hideTotal();
-    if (index < videoBestanden.length) {
-      video.src = videoBestanden[index];
-      video.play();
-      index++;
-    } else {
-      toonVragen();
-    }
-  }
- 
-  video.addEventListener("ended", () => {
-    if (!vragenActief) speelVolgendeVideo();
-  });
- 
-  function toonVragen() {
-    start.style.display = "none";
-    vragen.style.display = "flex";
-    document.getElementById("vraag1").style.display = "block";
-    document.getElementById("vraag2").style.display = "none";
-    document.getElementById("vraag3").style.display = "none";
-    document.getElementById("vraag4").style.display = "none";
-    vragenActief = true;
-  }
- 
-  function toonStart() {
-    start.style.display = "flex";
-    vragen.style.display = "none";
-    vragenActief = false;
-  }
- 
-  function beantwoordVraagBlue(nr, answer) {
-      if( localStorage.getItem('blueAnswer') === null) {
-      localStorage.setItem('blueAnswer', 0);
-    }
-    // sla antwoord op of verwerk het hier indien nodig
-    let saveBlue = parseInt(localStorage.getItem('blueAnswer'));
-    saveBlue++
-    localStorage.setItem('blueAnswer', saveBlue);
-    console.log(`blue: ${localStorage.getItem('blueAnswer')}`);
 
-    document.getElementById(`vraag${nr}`).style.display = "none";
-    if (nr === 1) {
-      document.getElementById("vraag2").style.display = "block";
-    } else if (nr === 2) {
-      document.getElementById("vraag3").style.display = "block";
-    } else if (nr === 3) {
-      document.getElementById("vraag4").style.display = "block";
-    } else if (nr === 4) {
+  <video id="animatie" autoplay muted playsinline disablePictureInPicture
+    controlsList="nodownload nofullscreen noremoteplayback"></video>
+
+  <div id="vraag-container">
+    <div class="vraag" id="vraag1">
+      <p>Wat vond je van de animatie?</p>
+      <button onclick="beantwoordVraagBlue(1)">Goed</button>
+      <button onclick="beantwoordVraagRed(1)">Slecht</button>
+    </div>
+    <div class="vraag" id="vraag2" style="display:none;">
+      <p>Zou jij AI voor de klas willen?</p>
+      <button onclick="beantwoordVraagBlue(2)">Ja</button>
+      <button onclick="beantwoordVraagRed(2)">Nee</button>
+    </div>
+    <div class="vraag" id="vraag3" style="display:none;">
+      <p>Lijkt het jou verstandig om AI voor de klas te hebben?</p>
+      <button onclick="beantwoordVraagBlue(3)">Ja</button>
+      <button onclick="beantwoordVraagRed(3)">Nee</button>
+    </div>
+    <div class="vraag" id="vraag4" style="display:none;">
+      <p>Heb jij zelf ooit AI gebruikt?</p>
+      <button onclick="beantwoordVraagBlue(4, 1)">Ja</button>
+      <button onclick="beantwoordVraagRed(4, 2)">Nee</button>
+    </div>
+    <div class="vraag" id="totaal" style="display:none;">
+      <p>Dit is wat mensen hebben beantwoord</p>
+      <p id="antwoordBlauw"></p>
+      <p id="antwoordRood"></p>
+      <button id="restart" onclick="speelVolgendeVideo()">Druk op een knop om opnieuw te starten</button>
+      <button style="display: none;" id="restart" onclick="speelVolgendeVideo()">Druk op een knop om opnieuw te
+        starten</button>
+    </div>
+  </div>
+
+  <!-- Tijdelijke verbindknop -->
+  <button id="verbindKnop">Verbind met Arduino</button>
+
+  <script>
+    const video = document.getElementById("animatie");
+    const vragen = document.getElementById("vraag-container");
+    const start = document.getElementById("start-container");
+    const videoBestanden = ["VideoMuse.mp4"];
+    let index = 0;
+    let vragenActief = false;
+    let myTimeout;
+
+    function speelVolgendeVideo() {
+      setLocalTimeout();
+      hideTotal();
+      if (index < videoBestanden.length) {
+        video.style.display = "flex";
+        video.src = videoBestanden[index];
+        video.play();
+        index++;
+      } else {
+        toonVragen();
+      }
+    }
+
+    video.addEventListener("ended", () => {
+      if (!vragenActief) speelVolgendeVideo();
+    });
+
+    function toonVragen() {
+      start.style.display = "none";
+      vragen.style.display = "flex";
+      document.getElementById("vraag1").style.display = "block";
+      document.getElementById("vraag2").style.display = "none";
+      document.getElementById("vraag3").style.display = "none";
+      document.getElementById("vraag4").style.display = "none";
+      vragenActief = true;
+    }
+
+    function toonStart() {
+      hideTotal();
       index = 0;
+      start.style.display = "flex";
+      vragen.style.display = "none";
+      video.style.display = "none";
       vragenActief = false;
-      showTotal();
     }
-  }
- 
+
+    function beantwoordVraagBlue(nr, answer) {
+      if (localStorage.getItem('blueAnswer') === null) {
+        localStorage.setItem('blueAnswer', 0);
+      }
+      // sla antwoord op of verwerk het hier indien nodig
+      let saveBlue = parseInt(localStorage.getItem('blueAnswer'));
+      saveBlue++
+      localStorage.setItem('blueAnswer', saveBlue);
+      console.log("blue: ${localStorage.getItem('blueAnswer')}");
+
+      document.getElementById(`vraag${nr}`).style.display = "none";
+      if (nr === 1) {
+        document.getElementById("vraag2").style.display = "block";
+      } else if (nr === 2) {
+        document.getElementById("vraag3").style.display = "block";
+      } else if (nr === 3) {
+        document.getElementById("vraag4").style.display = "block";
+      } else if (nr === 4) {
+        index = 0;
+        vragenActief = false;
+        showTotal();
+      }
+    }
+
     function beantwoordVraagRed(nr, answer) {
-      if( localStorage.getItem('redAnswer') === null) {
-      localStorage.setItem('redAnswer', 0);
-    }
-    // sla antwoord op of verwerk het hier indien nodig
-    let saveRed = parseInt(localStorage.getItem('redAnswer'));
-    saveRed++
-    localStorage.setItem('redAnswer', saveRed);
-    console.log(`red: ${localStorage.getItem('redAnswer')}`);
+      if (localStorage.getItem('redAnswer') === null) {
+        localStorage.setItem('redAnswer', 0);
+      }
+      // sla antwoord op of verwerk het hier indien nodig
+      let saveRed = parseInt(localStorage.getItem('redAnswer'));
+      saveRed++
+      localStorage.setItem('redAnswer', saveRed);
+      console.log("red: ${localStorage.getItem('redAnswer')}");
 
-    document.getElementById(`vraag${nr}`).style.display = "none";
-    if (nr === 1) {
-      document.getElementById("vraag2").style.display = "block";
-    } else if (nr === 2) {
-      document.getElementById("vraag3").style.display = "block";
-    } else if (nr === 3) {
-      document.getElementById("vraag4").style.display = "block";
-    } else if (nr === 4) {
-      index = 0;
-      vragenActief = false;
-      showTotal();
+      document.getElementById(`vraag${nr}`).style.display = "none";
+      if (nr === 1) {
+        document.getElementById("vraag2").style.display = "block";
+      } else if (nr === 2) {
+        document.getElementById("vraag3").style.display = "block";
+      } else if (nr === 3) {
+        document.getElementById("vraag4").style.display = "block";
+      } else if (nr === 4) {
+        index = 0;
+        vragenActief = false;
+        showTotal();
+      }
     }
-  }
- 
- function showTotal(){
-  let totaal = document.getElementById('totaal');
-  totaal.style.display = 'block';
-  let antwoordBlauw = document.getElementById('antwoordBlauw');
-  let antwoordRood = document.getElementById('antwoordRood');
-  antwoordBlauw.innerHTML = `blauw: ${localStorage.getItem('blueAnswer')}`;
-  antwoordRood.innerHTML = `rood: ${localStorage.getItem('redAnswer')}`;
-  antwoordBlauw.style.display = 'block';
-  antwoordRood.style.display = 'block';
- }
 
- function hideTotal(){
-  let vragen = document.getElementById('vraag-container')
-  let totaal = document.getElementById('totaal')
-  totaal.style.display = "none"
-  vragen.style.display = "none";
-  start.style.display = "none";
- }
- 
-    
- 
- 
-  toonStart();
- 
-  // ==== ARDUINO SERIAL LOGICA ====
-  let poort, lezer;
- 
-  async function verbindMetArduino(poortInput) {
-    try {
-      poort = poortInput;
-      await poort.open({ baudRate: 19200 });
- 
-      const decoder = new TextDecoderStream();
-      poort.readable.pipeTo(decoder.writable);
-      const inputStream = decoder.readable;
-      lezer = inputStream.getReader();
- 
-      leesKnoppen();
-    } catch (err) {
-      console.error("Verbinding met Arduinor mislukt:", err);
+    function showTotal() {
+      let totaal = document.getElementById('totaal');
+      totaal.style.display = 'block';
+      let antwoordBlauw = document.getElementById('antwoordBlauw');
+      let antwoordRood = document.getElementById('antwoordRood');
+      antwoordBlauw.innerHTML = `blauw: ${localStorage.getItem('blueAnswer')}`;
+      antwoordRood.innerHTML = `rood: ${localStorage.getItem('redAnswer')}`;
+      antwoordBlauw.style.display = 'block';
+      antwoordRood.style.display = 'block';
     }
-  }
- 
-  async function leesKnoppen() {
-    console.error("Knoppen verbonden");
-    while (true) {
-      const { value, done } = await lezer.read();
-      if (done) break;
-      if (value) verwerkInput(value.trim());
+
+    function hideTotal() {
+      let vragen = document.getElementById('vraag-container')
+      let totaal = document.getElementById('totaal')
+      totaal.style.display = "none";
+      vragen.style.display = "none";
+      start.style.display = "none";
     }
-  }
- 
-  function verwerkInput(data) {
-    const zichtbareVraag = document.querySelector(".vraag:not([style*='display: none'])");
-    if (!zichtbareVraag) return;
-    if ('vraag0'===zichtbareVraag) {
-      speelVolgendeVideo();
-      return;
+
+    function setLocalTimeout() {
+      if (undefined !== myTimeout) clearTimeout(myTimeout);
+      myTimeout = setTimeout(toonStart, 30000);
     }
-    const knoppen = zichtbareVraag.querySelectorAll("button");
-    if (data === "A" && knoppen[0]) knoppen[0].click();
-    if (data === "B" && knoppen[1]) knoppen[1].click();
-  }
- 
-  // Knop-handler
-  document.getElementById("verbindKnop").addEventListener("click", async () => {
-    try {
-      const geselecteerdePoort = await navigator.serial.requestPort();
-      await verbindMetArduino(geselecteerdePoort);
-      document.getElementById("verbindKnop").remove();
-    } catch (err) {
-      console.error("Kon geen poort kiezen:", err);
+
+    const startTimeout = setTimeout(prepStart, 3000);
+    function prepStart() {
+      clearTimeout(startTimeout);
+      toonStart();
     }
-  });
- 
-  // Probeer automatisch te verbinden bij reload
-  window.addEventListener("DOMContentLoaded", async () => {
-    const poorten = await navigator.serial.getPorts();
-    if (poorten.length > 0) {
-      await verbindMetArduino(poorten[0]);
-      document.getElementById("verbindKnop").remove();
+
+    // ==== ARDUINO SERIAL LOGICA ====
+    let poort, lezer;
+
+    async function verbindMetArduino(poortInput) {
+      try {
+        poort = poortInput;
+        await poort.open({ baudRate: 19200 });
+
+        const decoder = new TextDecoderStream();
+        poort.readable.pipeTo(decoder.writable);
+        const inputStream = decoder.readable;
+        lezer = inputStream.getReader();
+
+        leesKnoppen();
+      } catch (err) {
+        console.error("Verbinding met Arduinor mislukt:", err);
+      }
     }
-  });
-</script>
- 
+
+    async function leesKnoppen() {
+      console.error("Knoppen verbonden");
+      while (true) {
+        const { value, done } = await lezer.read();
+        if (done) break;
+        if (value) verwerkInput(value.trim());
+      }
+    }
+
+    function verwerkInput(data) {
+      const zichtbareStart = document.querySelector(".start:not([style*='display: none'])");
+      if (!vragenActief) {
+        speelVolgendeVideo();
+        return;
+      }
+      const zichtbareVraag = document.querySelector(".vraag:not([style*='display: none'])");
+      if (!zichtbareVraag) return;
+
+      const knoppen = zichtbareVraag.querySelectorAll("button");
+      if (data === "A" && knoppen[0]) knoppen[0].click();
+      if (data === "B" && knoppen[1]) knoppen[1].click();
+    }
+
+    // Knop-handler
+    document.getElementById("verbindKnop").addEventListener("click", async () => {
+      try {
+        const geselecteerdePoort = await navigator.serial.requestPort();
+        await verbindMetArduino(geselecteerdePoort);
+        document.getElementById("verbindKnop").remove();
+      } catch (err) {
+        console.error("Kon geen poort kiezen:", err);
+      }
+    });
+
+    // Probeer automatisch te verbinden bij reload
+    window.addEventListener("DOMContentLoaded", async () => {
+      const poorten = await navigator.serial.getPorts();
+      if (poorten.length > 0) {
+        await verbindMetArduino(poorten[0]);
+        document.getElementById("verbindKnop").remove();
+      }
+    });
+  </script>
+
 </body>
+
 </html>
- 
